progress commit: finished view and model, working on controller

--- a/eval/style.css
+++ b/eval/style.css
@@ -51,6 +51,7 @@ body {
     height: 2.2vh;
     font-size: 1.1em;
     background-color: #007BFF;
+    color: white;
     border: none;
     margin-bottom: 1vh;
 }
