--- a/eval/style.css
+++ b/eval/style.css
@@ -14,9 +14,12 @@ body {
     justify-content: center;
     flex-direction: column;
     align-items: center;
+    height: 50vh;
+    width: 50vw;
     max-height: 100vh;
     max-width: 80vw;
-    background-color: lightblue;
+    background-color: #d3d3d3;
+    border-radius: 10px;
 }
 
 .wrappercard__header {
@@ -46,7 +49,7 @@ body {
     margin: 0 2.5vw 1vh 2.5vw
 }
 
-.wrappercard__newgamebtn {
+.wrappercard__new-game-btn {
     width: 12vw;
     height: 2.2vh;
     font-size: 1.1em;
@@ -54,4 +57,10 @@ body {
     color: white;
     border: none;
     margin-bottom: 1vh;
+}
+
+.wrappercard__new-game-btn:hover {
+    background-color: #0056B3;
+    border: none;
+    cursor: pointer;
 }
