--- a/eval/style.css
+++ b/eval/style.css
@@ -15,9 +15,9 @@ body {
     flex-direction: column;
     align-items: center;
     height: 50vh;
-    width: 50vw;
+    width: 60vw;
     max-height: 100vh;
-    max-width: 80vw;
+    max-width: 90vw;
     background-color: #d3d3d3;
     border-radius: 10px;
 }
@@ -26,6 +26,7 @@ body {
     font-size: 2.5em;
     font-weight: bold;
     padding: 1.5vh 2.5vw;
+    padding: 1vh 2.5vw 1.5vh;
 }
 
 .wrappercard__chance {
@@ -63,4 +64,48 @@ body {
     background-color: #0056B3;
     border: none;
     cursor: pointer;
+}
+
+.wrappercard__history {
+    font-weight: bold;
+    margin-top: 5vh;
+}
+
+.wrappercard__letter-table {
+    display: flex;
+    justify-content: center;
+    list-style-type: none;
+    padding: 0;
+    flex-wrap: wrap;
+}
+
+.wrappercard__letter-table__letter {
+    background-color: white;
+    padding: .5vh .5vw;
+    border-radius: 5px;
+    margin-left: .2vw;
+    margin-right: .2vw;
+    font-size: 1.2rem;
+    font-weight: bold;
+}
+
+.wrappercard__letter-table__letter--correct {
+    background-color: green;
+    color: white;
+}
+
+.wrappercard__letter-table__letter--wrong {
+    background-color: red;
+    color: white;
+}
+
+.wrappercard__letter-table__letter--avail {
+    color: #2a2a2a;
+}
+
+.wrappercard__letter-table__letter--avail::after {
+    content: '1';
+    position: absolute;
+    font-size: 0.5rem;
+    top: auto;
 }
